Partial fix for too large array problem.

PR tree-optimization/23426
* decl.c (grokdeclarator): Use TYPE_SIZE_UNIT not TYPE_SIZE for
array size check.
Backport from mainline
2005-06-14  Roger Sayle  <roger@eyesopen.com>
* decl.c (grokdeclarator): Only check TREE_OVERFLOW on INTEGER_CST.

From-SVN: r103367